# project-generator

./: .gitignore  README.md  justfile  pyproject.toml
_ai/backlog/active/: 260424_2345__IMPLEMENTATION_PLAN__create-py-project-generator.md
_ai/backlog/archive/: 260424_2345__IMPLEMENTATION_PLAN__create-py-project-generator.md
_ai/backlog/reports/: 260425_0005__IMPLEMENTATION_REPORT__create-py-project-generator.md
src/py_project_generator/: __init__.py  cli.py  config.py
src/py_project_generator/commands/: generate_cmd.py
src/py_project_generator/core/: __init__.py  generator.py
src/py_project_generator/templates/cookiecutter-python-cli/: cookiecutter.json
src/py_project_generator/templates/cookiecutter-python-cli/{{cookiecutter.project_slug}}/: README.md  justfile  pyproject.toml
src/py_project_generator/templates/cookiecutter-python-cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
src/py_project_generator/templates/cookiecutter-python-cli/{{cookiecutter.project_slug}}/tests/: test_cli.py
src/py_project_generator/templates/cookiecutter-sw6-plugin/: cookiecutter.json
src/py_project_generator/templates/cookiecutter-sw6-plugin/{{cookiecutter.plugin_name_with_hyphens}}/: .gitignore  README.md  composer.json  justfile
src/py_project_generator/templates/cookiecutter-sw6-plugin/{{cookiecutter.plugin_name_with_hyphens}}/src/: {{cookiecutter.plugin_class}}.php
src/py_project_generator/templates/cookiecutter-sw6-plugin/{{cookiecutter.plugin_name_with_hyphens}}/src/Command/: ExampleCommand.php
src/py_project_generator/templates/cookiecutter-sw6-theme/: cookiecutter.json
src/py_project_generator/templates/cookiecutter-sw6-theme/{{cookiecutter.theme_name_with_hyphens}}/: .gitignore  README.md  composer.json  justfile
src/py_project_generator/templates/cookiecutter-sw6-theme/{{cookiecutter.theme_name_with_hyphens}}/src/: {{cookiecutter.theme_class}}.php
src/py_project_generator/templates/cookiecutter-sw6-theme/{{cookiecutter.theme_name_with_hyphens}}/src/Resources/: theme.json
src/py_project_generator/utils/: string_utils.py
tests/: test_cli.py
(+6 files in other folders)
