[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-project-generator"
version = "0.1.0"
description = "A generator for creating Python CLI projects using Cookiecutter and UV."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Topdata Software GmbH", email = "info@topdata.de" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "cookiecutter>=2.5.0",
    "pyyaml>=6.0",
]

[project.scripts]
py-project-generator = "py_project_generator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_project_generator"]

[tool.hatch.build.targets.wheel.force-include]
"src/py_project_generator/templates" = "py_project_generator/templates"

[tool.ruff]
line-length = 88
extend-exclude = ["src/py_project_generator/templates/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
